tests/ui/traits/non_lifetime_binders/bad-bounds.stderr
error[E0428]: the name `A` is defined multiple times
  --> $DIR/bad-bounds.rs:8:5
   |
LL |     enum A {}
   |     ------ previous definition of the type `A` here
LL |     struct A<A>;
   |     ^^^^^^^^^^^^ `A` redefined here
   |
   = note: `A` must be defined only once in the type namespace of this block

error[E0404]: expected trait, found type parameter `A`
  --> $DIR/bad-bounds.rs:4:24
   |
LL |   fn produce() -> for<A: A<{
   |  _____________________-__^
   | |                     |
   | |                     found this type parameter
LL | |
LL | |     #[derive(Hash)]
LL | |     enum A {}
LL | |     struct A<A>;
LL | | }>> Trait {}
   | |__^ not a trait

error[E0405]: cannot find trait `Trait` in this scope
  --> $DIR/bad-bounds.rs:9:5
   |
LL | }>> Trait {}
   |     ^^^^^ not found in this scope

error: bounds cannot be used in this context
  --> $DIR/bad-bounds.rs:4:24
   |
LL |   fn produce() -> for<A: A<{
   |  ________________________^
LL | |
LL | |     #[derive(Hash)]
LL | |     enum A {}
LL | |     struct A<A>;
LL | | }>> Trait {}
   | |__^

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0404, E0405, E0428.
For more information about an error, try `rustc --explain E0404`.
